--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,3 +1,27 @@
 .bold-text {
     font-weight: bold;
 }
+
+
+.loaderr {
+    width: 60px;
+    height: 60px;
+    border: 5px solid #FFF;
+    border-bottom-color: #1c0905;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    margin-top: 60px;
+    margin-left: 90PX;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
